--- a/package.json
+++ b/package.json
@@ -27,11 +27,15 @@
     "vue-sweetalert2": "^5.0.11"
   },
   "devDependencies": {
+    "@types/node": "^24.0.11",
     "@vitejs/plugin-vue": "^6.0.0",
+    "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.3",
     "vite": "^7.0.0",
-    "vite-plugin-vue-devtools": "^7.7.7"
+    "vite-plugin-vue-devtools": "^7.7.7",
+    "vue-tsc": "^3.0.1"
   }
 }
